# StarSim

./: .gitignore  LICENSE  README  README.md  pyproject.toml
.github/workflows/: build_docs.yml  build_pages.yml  run_notebooks.yml  unit_test.yml
STLib/: __init__.py  camera.py  filter.py  lens.py  sensor.py  sources.py  utils.py
STLib/functions/: dark.py  psf.py
STLib/utils/: __init__.py  conversion.py  debug.py  gaia_spectra.py  horizons_query.py  sbdb_query.py  typing.py
data/: .gitignore
docs/: .gitignore  404.html  Gemfile  _config.yml  examples.markdown  index.markdown  postprocess.py
docs/examples/: osiris-rex.md
docs/source/: api.rst  conf.py  examples.rst  index.rst
docs/source/_static/css/: custom.css
docs/source/examples/: osiris-rex.ipynb
examples/: gaia.html  gaia.ipynb  osiris-rex.ipynb
tests/: test_components.py  validate-psf.py
